# music-grammars

./: music-grammars.cabal  stack.yaml
app/: Main.hs
src/: Grammar.hs  Music.hs
src/Grammar/: Harmony.hs  Melody.hs  Tabla.hs  Types.hs  Utilities.hs
