name: music-grammars
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Orestis Melkonian <melkon.or@gmail.com>
stability: experimental
homepage: http://github.com/omelkonian/music-grammars/
bug-reports: http://github.com/omelkonian/music-grammars/issues
synopsis: Algorithmic music composition
description:
    A library consisting of several mini-DSLs for representing, manipulating and
    automatically generating music.
category: Algorithmic Music Composition,
          Automatic Music Generation,
          Generative Music Grammars
author: Orestis Melkonian
extra-source-files:
    README.md
    LICENSE

source-repository head
    type: git
    location: git://github.com/omelkonian/music-grammars.git

library
    exposed-modules:
        Music
        Grammar
        Grammar.Types
        Grammar.Utilities
        Grammar.Harmony
        Grammar.Melody
        Grammar.Tabla
    build-depends:
        base >=4.7 && <5,
        Euterpea ==2.0.6,
        random -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
    default-extensions: PatternSynonyms
                        PostfixOperators
                        DeriveGeneric
                        ScopedTypeVariables
                        MultiParamTypeClasses
                        TypeSynonymInstances
                        FlexibleInstances
                        ConstraintKinds
                        FunctionalDependencies
                        ViewPatterns

executable music-exe
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        music-grammars -any
    default-language: Haskell2010
    hs-source-dirs: app
